@@ -1,6 +1,5 @@
 package mcjty.rftoolsbase.modules.informationscreen.blocks;
 
-import mcjty.lib.McJtyLib;
 import mcjty.lib.blocks.BaseBlock;
 import mcjty.lib.blocks.RotationType;
 import mcjty.lib.builder.BlockBuilder;
@@ -8,9 +7,7 @@ import mcjty.lib.varia.OrientationTools;
 import net.minecraft.block.Block;
 import net.minecraft.block.BlockRenderType;
 import net.minecraft.block.BlockState;
-import net.minecraft.client.util.ITooltipFlag;
 import net.minecraft.entity.player.PlayerEntity;
-import net.minecraft.item.ItemStack;
 import net.minecraft.tileentity.TileEntity;
 import net.minecraft.util.ActionResultType;
 import net.minecraft.util.Direction;
@@ -19,36 +16,20 @@ import net.minecraft.util.math.BlockPos;
 import net.minecraft.util.math.BlockRayTraceResult;
 import net.minecraft.util.math.shapes.ISelectionContext;
 import net.minecraft.util.math.shapes.VoxelShape;
-import net.minecraft.util.text.ITextComponent;
-import net.minecraft.util.text.StringTextComponent;
-import net.minecraft.util.text.TextFormatting;
 import net.minecraft.world.IBlockReader;
 import net.minecraft.world.World;
 
 import javax.annotation.Nonnull;
-import java.util.List;
+
+import static mcjty.lib.builder.TooltipBuilder.*;
 
 public class InformationScreenBlock extends BaseBlock {
 
     public InformationScreenBlock() {
         super(new BlockBuilder()
+                .info(key("message.rftoolsbase.shiftmessage"))
+                .infoShift(header(), gold())
                 .tileEntitySupplier(InformationScreenTileEntity::new));
-    }
-
-    @Override
-    public void addInformation(ItemStack itemStack, IBlockReader world, List<ITextComponent> list, ITooltipFlag flag) {
-        super.addInformation(itemStack, world, list, flag);
-        if (McJtyLib.proxy.isShiftKeyDown()) {
-            list.add(new StringTextComponent(TextFormatting.WHITE + "Place this block on a powercell"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "to display information about that cell"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "Right click with a wrench to change"));
-            list.add(new StringTextComponent(TextFormatting.WHITE + "modes"));
-            list.add(new StringTextComponent(TextFormatting.GRAY + "Bonus: this block can display"));
-            list.add(new StringTextComponent(TextFormatting.GRAY + "power information about any block"));
-            list.add(new StringTextComponent(TextFormatting.GRAY + "that supports RF/FE"));
-        } else {
-            list.add(new StringTextComponent(TextFormatting.WHITE + "<Press Shift>"));
-        }
     }
 
     public static final VoxelShape BLOCK_NORTH = Block.makeCuboidShape(0.0F, 0.0F, 0.0F, 16.0F, 16.0F, 1F);
